--- a/drinklist.html
+++ b/drinklist.html
@@ -5,11 +5,20 @@
 
 <body>
 <h2>Restaurant List</h2>
-<ul>
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
-</ul>  
+<table>
+<tr>
+
+<td>
+Coffee
+</td>
+<td>
+Tea
+</td>
+<td>
+Milk
+</td>
+</tr>
+</table>
 
 </body>
 
